--- a/html and css files/signUp.css
+++ b/html and css files/signUp.css
@@ -15,10 +15,9 @@ figure {
   height: 2rem;
   width: 2rem;
 }
-
 /* .backArrow {
-    height: 100%;
-  } */
+  height: 100%;
+} */
 
 img {
   width: 100%;
@@ -31,17 +30,25 @@ img {
   background: #ffffff7b;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   gap: 35px;
   padding: 16px;
-  position: relative;
 }
 
 header {
-  position: absolute;
-  top: 0;
-  left: 0;
+  width: 99%;
+  height: 25vh;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+}
+
+nav {
+  /* background: green; */
+  display: flex;
+  width: 100%;
+  height: 50%;
+  justify-content: center;
+  position: relative;
 }
 
 .backArrow {
@@ -49,42 +56,28 @@ header {
   left: 0;
 }
 
-/* main  styles*/
-main {
-  width: 80%;
-  height: 70%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+nav h1 {
+  height: 100%;
+  color: rgb(0, 0, 0);
+  /* justify-self: center; */
   text-align: center;
-  justify-content: center;
-  gap: 2rem;
+  align-self: flex-end;
+  font-size: 48px;
 }
 
-.welcomeBack {
-  width: 100%;
-  height: 27%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.welcomeBack h1 {
+header p {
   height: 50%;
-  width: 70%;
-  font-size: 3rem;
-}
-.welcomeBack p {
-  min-height: 40%;
+  text-align: center;
   font-size: 1.5rem;
-  width: 80%;
+  font-weight: 400;
+  /* line-height: 29.26px; */
 }
 
 /* style for form */
 form {
   align-self: center;
   width: 25vw;
-  height: 70%;
+  height: 570px;
   /* background: rgb(170, 206, 170); */
   display: flex;
   flex-direction: column;
@@ -93,35 +86,36 @@ form {
 
 .formWwrap {
   background: rgb(209, 209, 209);
-  min-height: 75%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  padding: 14px;
-  border-radius: 5px;
-}
-
-.inputWrap {
   height: 80%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 8px;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 10px;
 }
 
-.inputWrap input {
-  width: 100%;
-  align-self: center;
-  height: 30%;
-  border: 1px solid black;
-  padding-left: 10px;
+.inputWrap {
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .inputWrap p {
-  align-self: flex-end;
+  color: red;
+  align-self: flex-start;
   font-size: smaller;
+  height: 2%;
+  margin-top: -0.8rem;
+  padding-left: 18px;
+}
+
+input {
+  width: 90%;
+  align-self: center;
   height: 12%;
+  border: 1px solid black;
+  padding-left: 10px;
 }
 
 input[type="number"]::-webkit-inner-spin-button {
@@ -131,16 +125,11 @@ input[type="number"]::-webkit-inner-spin-button {
 .iconWrapper {
   display: flex;
   justify-content: center;
-  gap: 35px;
+  gap: 25px;
 }
 .iconWrapper a {
   height: 100%;
   width: 100%;
-}
-
-.iconWrapper figure {
-  height: 2.4rem;
-  width: 2.4rem;
 }
 
 .nextWrap {
@@ -150,5 +139,9 @@ input[type="number"]::-webkit-inner-spin-button {
   background: rgb(0, 0, 0);
   color: white;
   cursor: pointer;
-  height: 1.9rem;
+}
+
+.nextWrap figure {
+  height: 40%;
+  margin-left: 5px;
 }
