--- a/html and css files/signIn.css
+++ b/html and css files/signIn.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -9,6 +11,8 @@ body {
   background-image: url("./signUpbg.jfif");
   display: grid;
   place-items: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
 }
 
 figure {
@@ -74,6 +78,8 @@ main {
   height: 50%;
   width: 70%;
   font-size: 3rem;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
 }
 .welcomeBack p {
   min-height: 40%;
@@ -123,6 +129,7 @@ form {
   align-self: flex-end;
   font-size: smaller;
   height: 12%;
+  margin: 6px;
 }
 
 input[type="number"]::-webkit-inner-spin-button {
