--- a/html and css files/style.css
+++ b/html and css files/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -51,6 +53,7 @@ figure {
   height: 4rem;
   width: 4rem;
 }
+
 .container {
   min-height: 100dvh;
   width: 100vw;
@@ -61,11 +64,8 @@ figure {
 }
 
 .hero {
-  /* outline: 1px solid red; */
   max-width: 100%;
   height: 100vh;
-  /* width: 100vw; */
-  /* background: gray; */
   background: linear-gradient(rgba(0, 0, 0, 0.144), rgba(0, 0, 0, 1)),
     url("./back-img-hero.jfif");
   background-position: center;
@@ -93,11 +93,24 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* background-color: green; */
   height: 10vh;
   width: 100%;
   padding: 0 2rem;
   overflow: clip;
+  padding: 5px;
+}
+
+#CadenceLogo {
+  /* background-color: red; */
+  width: 13%;
+  align-self: center;
+  height: 80%;
+  margin-left: 10px;
+}
+
+#CadenceLogo img {
+  width: 100%;
+  height: 100%;
 }
 
 nav ul {
@@ -483,10 +496,14 @@ footer figure img {
 }
 .footerLogo {
   display: flex;
-  align-items: center;
+  align-self: center;
   justify-content: center;
   width: 20%;
-  font-size: 5rem;
+}
+
+.footerLogo img {
+  width: 100%;
+  height: 100%;
 }
 
 .footerNotes {
