--- a/html and css files/dashboard.css
+++ b/html and css files/dashboard.css
@@ -9,3 +9,53 @@
   font-weight: bolder;
   color: black;
 }
+
+.Main-BelowHero {
+  margin-top: 3rem;
+}
+
+.event-cards {
+  width: 62vw;
+
+  grid-template-columns: 32% 32% 32%;
+
+  gap: 4px;
+}
+
+.Main-BelowHero {
+  min-height: 100dvh;
+  width: 90vw;
+  align-self: center;
+  display: flex;
+  position: relative;
+  padding-top: 1rem;
+}
+
+.lists-of-events {
+  /* background: rgb(232, 182, 182); */
+  width: 30%;
+  height: 50vh;
+  position: sticky;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+
+  gap: 1rem;
+}
+
+.event-cards article figure {
+  height: 60%;
+}
+
+.navigateBtn {
+  cursor: pointer;
+  transform: translateY(-3rem);
+  width: 5rem;
+  height: 5rem;
+  /* background: red; */
+}
+
+.navigateBtn img {
+  height: 100%;
+  width: 100%;
+}
