--- a/html and css files/style.css
+++ b/html and css files/style.css
@@ -19,7 +19,6 @@ html {
 }
 
 body {
-  /* font-size: inter; */
   width: 100vw;
   color: black;
   /* background: orange; */
@@ -69,7 +68,8 @@ figure {
   background: linear-gradient(rgba(0, 0, 0, 0.144), rgba(0, 0, 0, 1)),
     url("./back-img-hero.jfif");
   background-position: center;
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
   color: white;
   display: flex;
   flex-direction: column;
@@ -80,11 +80,11 @@ figure {
   color: white;
   transition: all 1s ease-in-out;
 }
-.nav-links-Wrap ul li a:hover {
+/* .nav-links-Wrap ul li a:hover {
   color: white;
   font-weight: bolder;
   font-size: 1.3rem;
-}
+} */
 .nav-links-Wrap ul {
   list-style: none;
 }
@@ -102,10 +102,13 @@ nav {
 
 #CadenceLogo {
   /* background-color: red; */
-  width: 13%;
+  /* width: 13%; */
+  width: 100px;
+  height: 50px;
   align-self: center;
   height: 80%;
   margin-left: 10px;
+  /* background: green; */
 }
 
 #CadenceLogo img {
@@ -150,6 +153,10 @@ nav ul {
   width: 30%;
 }
 
+.hamBug {
+  display: none;
+}
+
 .nav-links-Wrap ul:nth-child(2) li:nth-child(2) a {
   /* background-color: rgb(255, 255, 255); */
   color: black;
@@ -177,6 +184,9 @@ nav ul {
   height: 80%;
   max-width: 100vw;
   margin-bottom: 2rem;
+  /* background: red; */
+}
+.hero-main {
 }
 
 .hero-discoverText {
@@ -187,12 +197,21 @@ nav ul {
   width: 100%;
   align-self: center;
   text-align: center;
-  /* font-size: 3rem; */
-  font-size: 3.5vw;
+  font-size: 2rem;
+  /* font-size: 3.2vw; */
   padding-bottom: 2rem;
   font-weight: bolder;
   font-family: inter;
 }
+
+/* mobile test */
+.hero-discoverText {
+  font-size: 2rem;
+  text-align: center;
+  align-items: center;
+  /* background: green; */
+}
+/* ....... */
 
 .hero-p {
   /* font-size: 1.8rem; */
@@ -218,6 +237,7 @@ form {
   display: flex;
   justify-content: space-between;
 }
+
 .search-input {
   display: flex;
   align-items: center;
@@ -519,4 +539,487 @@ footer figure img {
   /* justify-content: center; */
   margin-top: 3rem;
   gap: 1.3rem;
+}
+
+@media screen and (max-width: 700px) {
+  body {
+    width: 100vw;
+    color: black;
+    overflow: clip;
+    overflow-y: auto;
+    scrollbar-width: none;
+  }
+
+  body::-webkit-scrollbar-button {
+    display: none;
+  }
+
+  span {
+    display: inline;
+    text-align: center;
+  }
+
+  .container {
+    min-height: 100dvh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .hero {
+    max-width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.144), rgba(0, 0, 0, 1)),
+      url("./back-img-hero.jfif");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    /* background: green; */
+  }
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 10vh;
+    width: 100%;
+    padding: 0 2rem;
+    overflow: clip;
+    padding: 5px;
+    /* position: sticky; */
+    /* top: 0; */
+    /* background: red; */
+  }
+
+  #CadenceLogo {
+    /* width: 100px;
+    height: 50px;
+    align-self: center;
+    height: 80%;
+    margin-left: 10px; */
+  }
+
+  #CadenceLogo img {
+    /* width: 100%;
+    height: 100%; */
+  }
+
+  .nav-links-Wrap {
+    width: 50%;
+    /* position: relative; */
+  }
+
+  .hamBug {
+    display: block;
+    width: 100px;
+    height: 50px;
+    margin-left: 7rem;
+  }
+  .nav-links-Wrap ul:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 7%;
+    right: 10%;
+    background: black;
+    z-index: 100;
+  }
+  .nav-links-Wrap ul:nth-child(2) {
+    height: 4rem;
+    width: 50%;
+    margin: 0 auto;
+    position: absolute;
+    bottom: 32%;
+    right: 29%;
+    cursor: pointer;
+  }
+
+  .nav-links-Wrap ul:nth-child(2) li:nth-child(1) {
+    height: 80%;
+    width: 40%;
+    display: grid;
+    place-items: center;
+    border-radius: 2px;
+    margin: -1.5rem;
+  }
+  .nav-links-Wrap ul:nth-child(2) li:nth-child(1) a {
+    font-size: 2rem;
+    font-size: 1.7rem;
+    font-weight: bolder;
+  }
+
+  .nav-links-Wrap ul:nth-child(2) li:nth-child(2) {
+    background-color: rgb(255, 255, 255);
+    height: 4rem;
+    width: 7rem;
+    display: grid;
+    place-items: center;
+    border-radius: 2px;
+    margin: -1.5rem;
+  }
+  .nav-links-Wrap ul:nth-child(2) li:nth-child(2) a {
+    color: black;
+    font-size: 1.7rem;
+    font-weight: bolder;
+  }
+
+  /* ......Hero main........ */
+  .block {
+    display: block;
+  }
+
+  .hero-main {
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* height: 80%; */
+    /* max-width: 100vw; */
+    /* margin-bottom: 2rem; */
+    position: relative;
+    bottom: 4rem;
+  }
+
+  .hero-discoverText {
+    /* display: flex; */
+    /* justify-content: flex-end; */
+    /* flex-direction: column; */
+    /* height: 40%; */
+    /* width: 100%; */
+    /* align-self: center; */
+    /* text-align: center; */
+    /* font-size: 8rem; */
+    /* font-size: 3.2vw; */
+    /* padding-bottom: 2rem; */
+    /* font-weight: bolder; */
+    /* font-family: inter; */
+    /* background: pink; */
+  }
+
+  /* mobile test */
+  .hero-discoverText {
+    font-size: clamp(2rem, 1vw, 1rem);
+    text-align: center;
+    align-items: center;
+    height: 60%;
+    /* background: green; */
+  }
+  /* ....... */
+
+  .hero-p {
+    /* font-size: 1.8rem; */
+    font-size: clamp(1.3rem, 1vw, 1.8rem);
+    text-align: center;
+    align-self: center;
+    font-weight: 400;
+    font-family: monserrat;
+  }
+
+  .formWrapper {
+    width: 90%;
+    margin-top: 8rem;
+    height: 10%;
+    align-self: center;
+    display: flex;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.5);
+    border: 2px solid white;
+  }
+  form {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .search-input {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    height: 100%;
+    width: 50%;
+    /* background: blueviolet; */
+    padding-left: 10px;
+  }
+
+  .search-input input {
+    width: 70%;
+    height: 45%;
+    padding-left: 5px;
+    font-size: larger;
+    background: none;
+    border: none;
+  }
+
+  .search-input input:focus {
+    outline: none;
+  }
+
+  .search-input input[type="text"]::placeholder {
+    color: white;
+    font-size: 2.1vw;
+  }
+
+  .search-input figure,
+  .location figure {
+    height: 2rem;
+    width: 2rem;
+  }
+
+  .location {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 1rem;
+    /* background: greenyellow; */
+    width: 40%;
+    height: 100%;
+  }
+  .location a {
+    color: whitesmoke;
+    justify-self: end;
+    /* background: black; */
+    margin-left: 1rem;
+    font-size: 2.3vw;
+    font-weight: 100;
+    letter-spacing: 1px;
+  }
+
+  .searchBtn {
+    width: 19%;
+    background: black;
+    color: white;
+    cursor: pointer;
+  }
+
+  /* ................ */
+  .otherLinks {
+    display: none;
+  }
+  .otherLinks ul {
+    min-width: 40%;
+    display: flex;
+    justify-content: space-between;
+    /* background: yellow; */
+  }
+  .otherLinks ul li article {
+    /* border-radius: 50%; */
+    /* background: red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+  }
+
+  .otherLinks ul li figure {
+    height: 3rem;
+    width: 3rem;
+    background: white;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+  }
+
+  .otherLinks ul li figure img {
+    background: white;
+    height: 60%;
+    width: 60%;
+  }
+
+  /* The styles from line 282 can be replicated */
+
+  .Main-BelowHero {
+    min-height: 100dvh;
+    width: 80vw;
+    align-self: center;
+    display: flex;
+    position: relative;
+    padding-top: 1rem;
+  }
+
+  .lists-of-events {
+    /* background: rgb(232, 182, 182); */
+    width: 35%;
+    height: 50vh;
+    position: sticky;
+    top: 0;
+    display: none;
+    flex-direction: column;
+
+    gap: 1rem;
+  }
+
+  .lists-of-events li {
+    display: flex;
+  }
+  .lists-of-events li article {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+  }
+  .lists-of-events li article span {
+    display: inline;
+  }
+  .lists-of-events li article figure {
+    border-radius: 50%;
+    height: 2.7rem;
+    width: 2.7rem;
+  }
+  .lists-of-events li article figure img {
+    border-radius: 50%;
+  }
+
+  /* EventCARDS  side bAR*/
+
+  .event-cards {
+    min-height: 100vh;
+    /* background: tomato; */
+    width: 100%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-auto-rows: 56vh;
+    /* background: goldenrod; */
+    gap: 4px;
+  }
+
+  .event-cards article figure {
+    width: 100%;
+    height: 60%;
+    display: grid;
+    place-items: center;
+    overflow: clip;
+    border-radius: 10px;
+  }
+  .event-cards article figure .ScaleiImg {
+    transition: all 1s ease-in-out;
+  }
+  .event-cards article figure .ScaleiImg:hover {
+    transform: scale(1.1);
+  }
+
+  .eleg-star-rate {
+    display: grid;
+    grid-template-columns: 65% 10% 20%;
+    grid-template-rows: 3rem;
+    /* background: green; */
+    width: 100%;
+    height: 20%;
+    place-items: center;
+  }
+  .eleg-star-rate span {
+    display: inline;
+  }
+
+  .starred5 {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    /* flex-direction: column; */
+    height: 2rem;
+  }
+
+  .starred5 img {
+    width: 1.2rem;
+    height: 1.2rem;
+  }
+  .viewMore {
+    border: 1px solid black;
+    width: 40%;
+  }
+
+  .elegstarFig {
+    width: 2rem;
+    /* background: black; */
+    /* height: 100%; */
+  }
+
+  .elegstarFig img {
+    width: 1rem;
+    height: 1rem;
+    /* background: red; */
+  }
+  .rating-start {
+    display: flex;
+    align-items: center;
+  }
+
+  /* before footer */
+
+  .nextPageWrap {
+    height: 10vh;
+    width: 90vw;
+    display: flex;
+    justify-content: end;
+    gap: 22rem;
+    flex-direction: row;
+    align-items: center;
+  }
+  .nextPageWrap a {
+    min-width: 15%;
+    height: 50%;
+    text-decoration: none;
+    display: grid;
+    place-items: center;
+    font-size: larger;
+  }
+  .nextPageWrap p {
+    font-size: larger;
+  }
+
+  /* footer */
+
+  footer {
+    margin-top: -9rem;
+    height: 50vh;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+  }
+
+  footer figure {
+    /* width: 80%; */
+    /* height: 100%; */
+    /* margin: 0 auto; */
+    /* overflow: hidden; */
+    /* border-bottom: 2px solid black; */
+    /* position: relative; */
+    top: 8.2%;
+  }
+
+  footer figure img {
+    height: 130%;
+    /* background: goldenrod; */
+  }
+  .footerLogo {
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    width: 20%;
+  }
+
+  .footerLogo img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .footerNotes {
+    background: rgb(14, 14, 14);
+    color: rgb(255, 255, 255);
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+
+    gap: 0;
+  }
+  .footerNotes ul {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    margin-top: 3rem;
+    gap: 1.3rem;
+  }
 }
