--- a/html and css files/chat.css
+++ b/html and css files/chat.css
@@ -6,13 +6,14 @@
 }
 
 figure {
-  width: 3rem;
-  height: 3rem;
+  width: 5rem;
+  height: 5rem;
 }
 
 img {
   width: 100%;
   height: 100%;
+  border-radius: 50%;
 }
 .container {
   width: 1216px;
@@ -21,4 +22,14 @@ img {
   margin-top: 40px;
   display: grid;
   grid-template-columns: 10% 80%;
+}
+
+aside {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
+}
+
+aside figure:nth-child() {
 }
