--- a/html and css files/signUp.css
+++ b/html and css files/signUp.css
@@ -100,6 +100,21 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  position: relative;
+}
+.togglepwd {
+  position: absolute;
+  bottom: 26%;
+  right: 13%;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+.togglepwd2 {
+  position: absolute;
+  bottom: 7%;
+  right: 13%;
+  font-size: 1.2rem;
+  cursor: pointer;
 }
 
 .inputWrap p {
